=== DRomics : Dose response for omics ===

Version 1.1-0
=============
NEW FEATURES
- Add of bootstrap computation of confidence intervals on benchmark doses (new function bmdboot)


Version 1.0-1
=============
NEW FEATURES
- Add of column yextrem in the results of drcfit (y value at the extremum for biphasic curves)

Version 1.0-0
=============

- Initial release.